--- a/button.html
+++ b/button.html
@@ -1,4 +1,6 @@
 <!DOCTYPE html>
 <html>
 <body>
-<button type="button">click me!</button>
+<input type="button" onclick="location.href='https://www.roblox.com/home';" value="go to roblox"
+</body>
+</html>
