--- a/my first program in html.html
+++ b/my first program in html.html
@@ -1,18 +1,22 @@
 <DOCTYPE html>
 <html>
-<body>
+<body style= "background-color:#9999ff">
 <h1>programming languages</h1>
 <h2>Python</h2>
 <img src = "https://www.python.org/static/opengraph-icon-200x200.png" height = "220" width = "200">
 <p>this is the logo of python, a programing language .Python is my first programming language . </p>
+<input type="button" onclick="location.href='https://en.wikipedia.org/wiki/Python_(programming_language)';" value="go to wikipedia for more information">
 <h3>HTML</h3>
 <img src = "https://upload.wikimedia.org/wikipedia/commons/thumb/6/61/HTML5_logo_and_wordmark.svg/2000px-HTML5_logo_and_wordmark.svg.png" height = "220" width = "200">
 <p>html is a programming used to make websites.</p>
+<input type="button" onclick="location.href='https://en.wikipedia.org/wiki/HTML';" value="go to wikipedia for more information">
 <h4>C++</h4>
 <img src = "https://upload.wikimedia.org/wikipedia/commons/thumb/1/18/ISO_C%2B%2B_Logo.svg/1200px-ISO_C%2B%2B_Logo.svg.png" height = "220" width = "200">
 <p>C++ is a mid level programming language.</p>
+<input type="button" onclick="location.href='https://en.wikipedia.org/wiki/C%2B%2B';" value="go to wikipedia for more information">
 <h5>Java</h5>
 <img src = "https://images.sftcdn.net/images/t_optimized,f_auto/p/2f4c04f4-96d0-11e6-9830-00163ed833e7/3163796423/java-runtime-environment-logo.png" height = "220" width = "200">
 <p>Java is the most used programming language.</p>
+<input type="button" onclick="location.href='https://en.wikipedia.org/wiki/Java';" value="go to wikipedia for more information">
 </body>
 </html>
